<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_name"
        android:textColor="#ff6a00"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_text"
        android:textColor="#333333"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="享誉世界盛名的车厘子产地--美国"
        android:textColor="#999999"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_commodity_introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/commodity_introduce"
        android:textColor="#999999"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

        <Button
            android:layout_width="65dp"
            android:layout_height="23dp"
            android:background="#66cc33"
            android:gravity="center_horizontal"
            android:text="现货"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/money"
            android:textColor="#ff0000"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/oldmoney"
            android:textColor="#cccccc"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#e8e8e8"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="选择数量"
        android:textColor="#333333"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <com.example.interviewdemo.view.FlowLayout
        android:id="@+id/flowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5KG/箱"
                android:button="@null"
                android:textSize="13sp"
                android:layout_marginRight="10dp"
                android:textColor="@drawable/btnselect"
                android:background="@drawable/radio_btn_bak"
                android:padding="10dp"
                android:enabled="false"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5KG/箱"
                android:button="@null"
                android:textSize="13sp"
                android:layout_marginRight="10dp"
                android:textColor="@drawable/btnselect"
                android:background="@drawable/radio_btn_bak"
                android:padding="10dp"
                /> <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5KG/箱"
            android:button="@null"
            android:textSize="13sp"
            android:layout_marginRight="10dp"
            android:textColor="@drawable/btnselect"
            android:background="@drawable/radio_btn_bak"
            android:padding="10dp"
            />
        </RadioGroup>
    </com.example.interviewdemo.view.FlowLayout>>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#e8e8e8"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="购买数量"
        android:textColor="#333333"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.example.interviewdemo.view.CountEditTextView
        app:ced_edit="false"
        app:ced_icoLeft="@mipmap/ic_launcher"
        app:ced_icoRight="@mipmap/ic_launcher"
        app:ced_maxValue="20"
        app:ced_minValue="0"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    </RelativeLayout>

</LinearLayout>